--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.17.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
