--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.5.7",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
+    "express-toastr": "^2.0.2",
     "flash": "^1.1.0",
     "mongoose": "^4.11.9",
     "mongoose-paginate": "^5.0.3",
