--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "serve-favicon": "^2.4.3",
-    "shortid": "^2.2.8"
+    "shortid": "^2.2.8",
+    "validator": "^8.1.0"
   }
 }
